--- a/style.css
+++ b/style.css
@@ -14,12 +14,20 @@
     border: 2px solid black;
     border-radius: 7px;
     height: 70px;
+    font-size: 20px;
 }
 #buttons {
     width: 350px; 
 }
 #buttons button{
-    width: 100px;
-    border-radius: 2px;
+    width: 70px;
+    border-radius: 10px;
     height: 50px;
+    margin-left: 13px;
+}
+#lastbuttons button{
+    width: 160px;
+    border-radius: 10px;
+    height: 50px;
+
 }
